--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
         <div class="carousel-item active">
           <img src="./assets/img/hero-img/001.jpg" alt="Los Angeles" class="d-block" style="width: 100%;" />
           <div class="carousel-caption d-none d-md-block">
-            <h2>Second slide labe Second slide labell</h2>         
+            <h2>Second slide labe Second slide labell</h2>
           </div>
-    
+
         </div>
         <div class="carousel-item">
           <img src="./assets/img/hero-img/IMG20220630111229-1-scaled.jpg" alt="Chicago" class="d-block"
@@ -694,21 +694,21 @@
             <a class="nav-link active bg-dark " data-bs-toggle="tab" href="#all">ALL</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link "  data-bs-toggle="pill" href="#events">EVENTS</a>
+            <a class="nav-link " data-bs-toggle="pill" href="#events">EVENTS</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link"  data-bs-toggle="pill" href="#emergency"> EMERGENCY</a>
+            <a class="nav-link" data-bs-toggle="pill" href="#emergency"> EMERGENCY</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link"  data-bs-toggle="pill" href="#disaster">DISASTER DRILLING
+            <a class="nav-link" data-bs-toggle="pill" href="#disaster">DISASTER DRILLING
               PROGRAM</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link"  data-bs-toggle="pill" href="#training">TRAINING
+            <a class="nav-link" data-bs-toggle="pill" href="#training">TRAINING
               WORKSHOP</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link"  data-bs-toggle="pill" href="#awerness">AWERNESS
+            <a class="nav-link" data-bs-toggle="pill" href="#awerness">AWERNESS
               PROGRAM</a>
           </li>
           <li class="nav-item mt-2">
@@ -723,7 +723,7 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/01-9.jpeg" alt="">
                   <div class="gallary-image-overlay">
                     <h5>Cyclone Mocha Disaster <br> Preparedness</h5>
                   </div>
@@ -731,50 +731,50 @@
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/02-Disaster-Prepareness-CIS-3.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/03-7.jpeg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
 
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/04-5.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/05-Disaster-Prepareness-CIS-1.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/06-Disaster-Drilling-Program-1.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/07-Saber-Hossain.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/08-Embassy-of-Japan-in-Bangladesh-1-1.jpeg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/09-Disaster-Drilling-Program-10.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
@@ -788,37 +788,37 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/07-Saber-Hossain.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/08-Embassy-of-Japan-in-Bangladesh-1-1.jpeg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/10-Saber-Hossain-1.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/11-07.jpeg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/12-WhatsApp-Image-2023-03-11-at-9.46.00-AM.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/13-005.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
@@ -830,34 +830,174 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/01-9.jpeg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/02-Disaster-Prepareness-CIS-3.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/03-7.jpeg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <img src="./assets/img/gallary/04-5.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/05-Disaster-Prepareness-CIS-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/14-cis-flood-response-2-scaled.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
             </div>
           </div>
-          <div id="disaster" class="container tab-pane fade"><br>dsada</div>
-          <div id="training" class="container tab-pane fade"><br>dsas</div>
-          <div id="awerness" class="container tab-pane fade"><br>dsa</div>
-          <div id="covid" class="container tab-pane fade"><br>adsa</div>
+          <div id="disaster" class="container tab-pane fade"><br>
+
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/06-Disaster-Drilling-Program-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/09-Disaster-Drilling-Program-10.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/15-Disaster-Drilling-Program-8.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/16-Disaster-Drilling-Program-3.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/17-Disaster-Drilling-Program-2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/18-Disaster-Drilling-Program-4.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="training" class="container tab-pane fade"><br>
+            <div class="row">
+
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/19-cis-training-workshop-1-july2022.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/20-cis-training-workshop-2-july2022.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+          <div id="awerness" class="container tab-pane fade"><br>
+            <div class="row">
+
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/21-awareness-program-cis1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/22-awareness-program-cis5.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/23-awareness-program-cis8.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/24-awareness-program-cis2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div id="covid" class="container tab-pane fade"><br>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/24-awareness-program-cis2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/25-covid19-response-cis.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/26-covid19-response-cis-2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/27-covid19-response-cis-5.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/28-covid19-response-cis-12.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallary/29-covid19-response-cis-6.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
           <!-- gallary-others -->
         </div>
 
