--- a/print-media.html
+++ b/print-media.html
@@ -261,7 +261,126 @@
                             alt="">
                     </div>
                 </div>
-
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/vorer-kagoj.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/habiganj-woment-empowerment-training-26-02-2023.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media//news-rangpur-30january-2.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/230-img20230212_11554719.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/231-news-rangpur-30january.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/232-the-news-times.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/233-vorer-kagoj (1).jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/234-Bangladesh-Town.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/235-jonokontho-269x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/236-hobiganj-flood-paper-cutting2.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/237-hobiganj-paper-cutting1-819x1024 (1).jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/238-Bangladesh-Bulatin-699x1024.jpg"
+                            alt="">
+                    </div>
+                </div>  
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/239-Protidinar-Barta-736x1024.jpg"
+                            alt="">
+                    </div>  
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/240-Report-70-920x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/241-Somachar-704x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/242-Protodinar-Bani-736x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/243-01-500x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/244-06-860x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/245-05-742x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/246-08-592x1024.jpg"
+                            alt="">
+                    </div>
+                </div>
 
             </div>
         </div>
