--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
     </div>
   </section>
   <!-- hero section end -->
-
+  <!-- gotop-button-start -->
+  <a class="gotopbtn" href="#"><i class="fa-solid fa-angle-up"></i></a>
+  <!-- gotop-button-end -->
   <!-- about-section- start -->
   <section id="about-us">
     <div class="container-fluid">
