--- a/print-media.html
+++ b/print-media.html
@@ -227,158 +227,142 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/06-Our-Banglaesh-Galachipa-16-april-2023.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/06-Our-Banglaesh-Galachipa-16-april-2023.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/07-daily-observer.jpg"
-                            alt="">
-                    </div>  
-                </div>
-                <div class="col-sm-4">
-                    <div class="print-media-news">
-                        <img src="./assets/img/print-media/08-daily-sun.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/07-daily-observer.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/09-new-age-554x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/08-daily-sun.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/10-amar-shongbad.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/09-new-age-554x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/11-the-news-time.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/10-amar-shongbad.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/vorer-kagoj.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/11-the-news-time.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/habiganj-woment-empowerment-training-26-02-2023.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/vorer-kagoj.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media//news-rangpur-30january-2.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/habiganj-woment-empowerment-training-26-02-2023.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/230-img20230212_11554719.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media//news-rangpur-30january-2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/231-news-rangpur-30january.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/230-img20230212_11554719.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/232-the-news-times.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/231-news-rangpur-30january.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/233-vorer-kagoj (1).jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/232-the-news-times.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/234-Bangladesh-Town.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/233-vorer-kagoj (1).jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/235-jonokontho-269x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/234-Bangladesh-Town.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/236-hobiganj-flood-paper-cutting2.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/235-jonokontho-269x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/237-hobiganj-paper-cutting1-819x1024 (1).jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/236-hobiganj-flood-paper-cutting2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/238-Bangladesh-Bulatin-699x1024.jpg"
-                            alt="">
-                    </div>
-                </div>  
-                <div class="col-sm-4">
-                    <div class="print-media-news">
-                        <img src="./assets/img/print-media/239-Protidinar-Barta-736x1024.jpg"
-                            alt="">
-                    </div>  
-                </div>
-                <div class="col-sm-4">
-                    <div class="print-media-news">
-                        <img src="./assets/img/print-media/240-Report-70-920x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/237-hobiganj-paper-cutting1-819x1024 (1).jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/241-Somachar-704x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/238-Bangladesh-Bulatin-699x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/242-Protodinar-Bani-736x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/239-Protidinar-Barta-736x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/243-01-500x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/240-Report-70-920x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/244-06-860x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/241-Somachar-704x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/245-05-742x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/242-Protodinar-Bani-736x1024.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="print-media-news">
-                        <img src="./assets/img/print-media/246-08-592x1024.jpg"
-                            alt="">
+                        <img src="./assets/img/print-media/243-01-500x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/244-06-860x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/245-05-742x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/246-08-592x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/247-07-951x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/248-02-1024x871.jpg" alt="">
                     </div>
                 </div>
 
