--- a/print-media.html
+++ b/print-media.html
@@ -365,7 +365,81 @@
                         <img src="./assets/img/print-media/248-02-1024x871.jpg" alt="">
                     </div>
                 </div>
-
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/249-04-345x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/250-04-630x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/251-Symposium-Paper-Cutting-1_page-0001.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/252-Symposium-Paper-Cutting-4_page-0001-701x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/253-Symposium-Paper-Cutting-5_page-0001-497x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/254-Symposium-Paper-Cutting-6_page-0001-316x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/255-Symposium-Paper-Cutting-3_page-0001-807x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/256-Symposium-Paper-Cutting-2_page-0001-666x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/257-2020-11-11-at-12.17.38-PM-666x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/258-Paper-Cutting_pages-to-jpg-0001-525x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/259-1-1024x955.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/260-3-649x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/261-8-701x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/262-10-637x1024.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="print-media-news">
+                        <img src="./assets/img/print-media/263-IMG_20190929_115235-523x1024.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
