--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
   </section>
   <!-- hero section end -->
   <!-- gotop-button-start -->
-  <a class="gotopbtn" href="#"><i class="fa-solid fa-angle-up"></i></a>
+  <!-- <a class="gotopbtn" href="#"><i class="fa-solid fa-angle-up"></i></a> -->
+  <a href="#" class="scrollup"> <i class="fa-solid fa-chevron-up" style="color: #f5f5f5;"></i></i></a>
   <!-- gotop-button-end -->
   <!-- about-section- start -->
   <section id="about-us">
@@ -352,7 +353,7 @@
               <div class="img-area">
 
                 <div class="img-area-picture">
-                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <img src="./assets/img/activities/04-1024x576.jpg" alt="" />
                   <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
@@ -370,7 +371,7 @@
             <div class="content">
               <div class="img-area">
                 <div class="img-area-picture">
-                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <img src="./assets/img/activities/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
                   <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
@@ -388,7 +389,7 @@
             <div class="content">
               <div class="img-area">
                 <div class="img-area-picture">
-                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <img src="./assets/img/activities/07-1024x768.jpeg" alt="" />
                   <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
@@ -406,7 +407,7 @@
             <div class="content">
               <div class="img-area">
                 <div class="img-area-picture">
-                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <img src="./assets/img/activities/3.jpg" alt="" />
                   <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
@@ -423,7 +424,7 @@
             <div class="content">
               <div class="img-area">
                 <div class="img-area-picture">
-                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <img src="./assets/img/activities/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
                   <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
@@ -441,7 +442,7 @@
             <div class="content">
               <div class="img-area">
                 <div class="img-area-picture">
-                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <img src="./assets/img/activities/Saber-Hossain.jpg" alt="" />
                   <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
