--- a/photo gallery.html
+++ b/photo gallery.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>photo gallery</title>
   <!-- css-link-start -->
   <link rel="stylesheet" href="./assets/css/style.css" />
   <!-- css-link-end -->
@@ -200,11 +200,10 @@
             <a class="nav-link " data-bs-toggle="pill" href="#events">EVENTS</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" data-bs-toggle="pill" href="#emergency"> EMERGENCY</a>
+            <a class="nav-link" data-bs-toggle="pill" href="#emergency"> EMERGENCY RESPONSE</a>
           </li>
           <li class="nav-item mt-2">
-            <a class="nav-link" data-bs-toggle="pill" href="#disaster">DISASTER DRILLING
-              PROGRAM</a>
+            <a class="nav-link" data-bs-toggle="pill" href="#disaster">HEALTH CAMP</a>
           </li>
           <li class="nav-item mt-2">
             <a class="nav-link" data-bs-toggle="pill" href="#training">TRAINING
@@ -228,7 +227,7 @@
                 <div class="gallary-img">
                   <img src="./assets/img/nav-gallary/01-005.jpg" alt="">
                   <div class="gallary-image-overlay">
-                    <h5>Cyclone Mocha Disaster <br> Preparedness</h5>
+                    <!-- <h5>Cyclone Mocha Disaster <br> Preparedness</h5> -->
                   </div>
                 </div>
               </div>
@@ -785,85 +784,119 @@
           </div>
           <div id="emergency" class="container tab-pane fade"><br>
             <div class="row">
+
+
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/01-9.jpeg" alt="">
+                  <img src="./assets/img/nav-gallary/13-cis-flood-response-1-scaled.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/02-Disaster-Prepareness-CIS-3.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/14-cis-flood-response-2-scaled.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/03-7.jpeg" alt="">
+                  <img src="./assets/img/nav-gallary/15-cis-flood-response-habiganj3.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/04-5.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/16-cis-flood-response-habiganj6.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/05-Disaster-Prepareness-CIS-1.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/17-cis-flood-response-habiganj9.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/14-cis-flood-response-2-scaled.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/18-cis-flood-response-habiganj7.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/19-cis-flood-response-kurigram1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/20-cis-flood-response-kurigram2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/21-cis-flood-response-kurigram3.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/23-cis-flood-response-netrokona1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/24-cis-flood-response-netrokona2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/25-cis-flood-response-netrokona3.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/26-cis-flood-response-netrokona4.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/27-cis-flood-response-sunamganj1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/28-cis-flood-response-sunamganj2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/29-cis-flood-response-sunamganj3.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
             </div>
           </div>
           <div id="disaster" class="container tab-pane fade"><br>
-
             <div class="row">
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/06-Disaster-Drilling-Program-1.jpg" alt="">
-                  <div class="gallary-image-overlay"></div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="gallary-img">
-                  <img src="./assets/img/gallary/09-Disaster-Drilling-Program-10.jpg" alt="">
-                  <div class="gallary-image-overlay"></div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="gallary-img">
-                  <img src="./assets/img/gallary/15-Disaster-Drilling-Program-8.jpg" alt="">
-                  <div class="gallary-image-overlay"></div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="gallary-img">
-                  <img src="./assets/img/gallary/16-Disaster-Drilling-Program-3.jpg" alt="">
-                  <div class="gallary-image-overlay"></div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="gallary-img">
-                  <img src="./assets/img/gallary/17-Disaster-Drilling-Program-2.jpg" alt="">
-                  <div class="gallary-image-overlay"></div>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <div class="gallary-img">
-                  <img src="./assets/img/gallary/18-Disaster-Drilling-Program-4.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/35-CIS_ZHANTU_CHAKMA98-scaled.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
             </div>
+
           </div>
+
+
           <div id="training" class="container tab-pane fade"><br>
             <div class="row">
 
@@ -888,25 +921,43 @@
 
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/21-awareness-program-cis1.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/55-awareness-program-cis3.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/22-awareness-program-cis5.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/56-awareness-program-cis4.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/23-awareness-program-cis8.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/57-awareness-program-cis5.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
-                  <img src="./assets/img/gallary/24-awareness-program-cis2.jpg" alt="">
+                  <img src="./assets/img/nav-gallary/58-awareness-program-cis2.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/59-awareness-program-cis8.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/60-awareness-program-cis9-scaled.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/nav-gallary/61-awareness-program-cis6.jpg" alt="">
                   <div class="gallary-image-overlay"></div>
                 </div>
               </div>
